# VR-MatrialScience

./: .gitmodules  CMakeLists.txt  README.md  context.txt  context_2.txt  lab08.py
AIChatModel/: AIChatModel.cpp  AIChatModel.h  AIChatModel.py  NLPModule.cpp  NLPModule.h  RAG.hpp  chat_template.json
STT/: CMakeLists.txt  README.md
STT/src/: audio_utils.cpp  audio_utils.h  main.cpp
Tests/: amibiguous_prompts.json  expected_prompts.json  test_AIChatModel.cpp
